# cards

./: .clang-format  .gitignore  .mocharc.json  .npmignore  .prettierrc.yaml  CMakeLists.txt  Makefile  README.md  esbuild.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: github-actions.yml
@types/: api.d.mts  cards_wasm.d.ts  gstate_wasm.d.ts  math_wasm.d.ts
cmake/: create_test.cmake  fmt.cmake  googletest.cmake  magic_enum.cmake  posix.toolchain.cmake  wasm_module.cmake
src/: CMakeLists.txt  api.mts  api.spec.ts
src/cards/: CMakeLists.txt  Card.cpp  CardHands.cpp  CardSet.cpp  Deal.cpp  FourHands.cpp  utils.cpp
src/cards/include/cards/: Card.hpp  CardHands.hpp  CardSet.hpp  Deal.hpp  FourHands.hpp  constants.hpp  utils.hpp
src/cards/tests/: CMakeLists.txt  Card.cpp  CardSet.cpp  Deal.cpp  FourHands.cpp  test_cards_wasm.js  test_cards_wasm.mjs
src/gstate/: CMakeLists.txt  GState.cpp  GameBehavior.cpp  GameVariant.cpp  PlayerVoids.cpp  ScoreResult.cpp  Trick.cpp  utils.cpp
src/gstate/include/gstate/: GState.hpp  GameBehavior.hpp  GameVariant.hpp  PlayerVoids.hpp  ScoreResult.hpp  Trick.hpp
src/gstate/tests/: CMakeLists.txt  GState.cpp  GameBehavior.cpp  GameOutcome.cpp  ScoreResult.cpp  test_gstate_wasm.js  test_gstate_wasm.mjs
src/math/: CMakeLists.txt  Int126.cpp  Int128.cpp  combinatorics.cpp  elo.cpp  math.cpp  random.cpp
src/math/include/math/: Bits.hpp  Int126.hpp  Int128.hpp  combinatorics.hpp  elo.hpp  math.hpp  random.hpp
src/math/tests/: Bits.cpp  CMakeLists.txt  Int126.cpp  Int128.cpp  combinatorics.cpp  elo.cpp  random.cpp  test_math_wasm.js  test_math_wasm.mjs
src/prim/: CMakeLists.txt  split.cpp
src/prim/include/prim/: dlog.hpp  range.hpp  split.hpp
src/stats/: CMakeLists.txt  RunningStats.cpp
src/stats/include/stats/: LineOfBestFit.hpp  RunningStats.hpp
src/types/: cards_wasm.d.ts  gstate_wasm.d.ts  math_wasm.d.ts
